crates/test-ui/ui/define_class_delegate_not_mainthreadonly.stderr
error[E0271]: type mismatch resolving `<CustomObject as ClassType>::ThreadKind == dyn MainThreadOnly`
 --> ui/define_class_delegate_not_mainthreadonly.rs
  |
  |     unsafe impl NSApplicationDelegate for CustomObject {
  |                                           ^^^^^^^^^^^^ expected trait `MainThreadOnly`, found trait `AllocAnyThread`
  |
  = note: expected trait object `dyn MainThreadOnly`
             found trait object `(dyn AllocAnyThread + 'static)`
  = help: `(dyn AllocAnyThread + 'static)` implements `MainThreadOnly` so you could box the found value and coerce it to the trait object `Box<dyn MainThreadOnly>`, you will have to change the expected type as well
  = note: required for `CustomObject` to implement `MainThreadOnly`
note: required by a bound in `NSApplicationDelegate`
 --> ui/define_class_delegate_not_mainthreadonly.rs
  |
  | / extern_protocol!(
  | |     pub unsafe trait NSApplicationDelegate: NSObjectProtocol + MainThreadOnly {
  | |                      --------------------- required by a bound in this trait
  | |         #[optional]
  | |         #[method(applicationDidFinishLaunching:)]
... |
  | |     unsafe impl ProtocolType for dyn NSApplicationDelegate {}
  | | );
  | |_^ required by this bound in `NSApplicationDelegate`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)
